[gd_scene load_steps=2 format=3 uid="uid://d0wnqf8aoltje"]

[ext_resource type="Script" path="res://Scripts/InGame/Boards/BoardNodeBase.gd" id="1_f0h3j"]

[node name="BoardNodeBase" type="Node2D"]
script = ExtResource("1_f0h3j")

[node name="TerritoryHolder" type="Node2D" parent="."]

[node name="LineHolder" type="Node2D" parent="."]
